<resources>
    <string name="app_name">RG Potter</string>
    <string name="app_description">Este é o seu RG potter, um APP para aqueles que amam esse universo criado por JK Rolling</string>
    <string name="app_credits">RG Potter só foi possível pela contribuição de Felipe Beserra e Gabrielle Neves, sem contar o desenvolvedor da API que utilizamos, David Barton</string>
    <string name="setup_title">Petrificus Totalis!</string>
    <string name="setup_subtitle">Aguarde enquanto carregamos algumas coisinhas...</string>
    <string name="setup_net_title">Conexão falha</string>
    <string name="setup_net_subtitle">Você não consegue se conectar com o servidor, tente verificar sua conexão com a internet!</string>
    <string name="setup_net_retry">Tentar novamente</string>

    <string name="permdesc_flashlight">Usaremos sua lanterna para nossas magias!</string>

    <string name="house_gryffindor">Grifinória</string>
    <string name="house_hufflepuff">Lufa-Lufa</string>
    <string name="house_ravenclaw">Corvinal</string>
    <string name="house_slytherin">Sonserina</string>
    <string name="house_none">Nenhuma</string>
    <string name="house_none_long">Não passou por Hogwarts</string>

    <string name="gender_m_name">Masculino</string>
    <string name="gender_f_name">Feminino</string>
    <string name="gender_u_name">Outros</string>
    <string name="gender_m_pronoun">o</string>
    <string name="gender_f_pronoun">a</string>
    <string name="gender_u_pronoun">o/a</string>

    <string name="exit">Sair</string>
    <string name="error">Algo deu errado :/</string>

    <string name="text_btn_cad">Cadastrar RG</string>
    <string name="text_btn_view">Fazer meu RG Potter</string>
    <string name="text_more">Saiba mais sobre a Saga</string>

    <string name="text_greeting">Olá, caro estudante de Hogwarts! Em que podemos te ajudar hoje? </string>

    <string name="text_menu">Menu</string>

    <string name="text_curiosity">Curiosidades</string>

    <string name="house">Casa de Hogwarts</string>

    <string name="patrono">Patrono</string>

    <string name="bithday">Data de nascimento</string>
    <string name="text_num">Número do RG</string>
    <string name="text_name">Nome</string>
    <string name="text_sexo">Sexo</string>

    <string name="qst_lookLike">Com qual personagem você mais se parece?</string>
    <string name="qst_sameHouse">Um personagem da sua casa!</string>
    <string name="qst_random">Um personagem completamente aleatório!</string>
    <string name="qst_patronus">Um personagem com o seu patrono! (inglês)</string>

    <string name="no_result">Infelizmente não achei ninguém :(</string>
    <string name="no_patronus">Infelizmente não achei ninguém, lembre-se de usar seu patrono em inglês!</string>

    <string name="btn_birth">Selecionar</string>
    <string name="btn_cad">Salvar</string>
    <string name="btn_photo">Tirar foto</string>
    <string name="title_sign">Preencha os campos e obtenha seu RG Potter!</string>

    <string name="saved">Alterações salvas</string>

    <string name="lumus">Lumus</string>

    <string name="default_spell">Feitiço</string>

    <string name="exname">Ex: Ana Silva</string>
    <string name="exnpatrono">Ex: Cervo</string>

    <string name="discover_house">Descubra a sua casa</string>


    <string name="lumus_header">Solte seu feitiço!</string>
    <string name="lumus_on">Gesticule!</string>
    <string name="lumus_joke">(é leviossa não levioSSAA)</string>
    <string name="lumus_stop">Prohibere (Parar)</string>

    <string name="back_menu">Voltar ao menu</string>

    <string name="title_lumus">Que tal aprender um feitiço de Hogwarts?</string>
    <string name="no_sensor_lumus_title">Vish, varinha quebrada!</string>
    <string name="no_sensor_lumus_desc">Parece que sua varinha não tem os sensores mágicos necessários, ou não estão disponíveis para o uso de nosso APP :(</string>

    <string name="instructions">Para ser um aluno de Hogwarts só falta aprender um feitiço e aqui te ensinamos isso também! Chacoalhe o celular e veja o feitiço Lumus acontecer!</string>


</resources>