<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    tools:context=".SignUpActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#FFFFFF"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="100dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="35dp"
                android:layout_marginTop="262dp"
                android:layout_marginEnd="638dp"
                android:layout_marginBottom="114dp"
                android:text="@string/patrono"
                android:textColor="#000000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView20"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="461dp"
                android:layout_marginTop="58dp"
                android:layout_marginBottom="318dp"
                android:text="@string/text_sexo"
                android:textColor="#000000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView19"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="183dp"
                android:layout_marginTop="58dp"
                android:layout_marginBottom="318dp"
                android:text="@string/text_name"
                android:textColor="#000000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView22"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="337dp"
                android:layout_marginTop="27dp"
                android:layout_marginEnd="336dp"
                android:layout_marginBottom="349dp"
                android:text="@string/title_sign"
                android:textColor="#000000"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.488"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <EditText
                android:id="@+id/txtPatronus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="48dp"
                android:layout_marginTop="284dp"
                android:layout_marginBottom="71dp"
                android:backgroundTint="#000000"
                android:ems="10"
                android:inputType="textPersonName"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:id="@+id/img_cadUser"
                android:layout_width="138dp"
                android:layout_height="140dp"
                android:layout_marginStart="35dp"
                android:layout_marginBottom="197dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                tools:srcCompat="@android:mipmap/sym_def_app_icon" />

            <Button
                android:id="@+id/btnTakePicture"
                android:layout_width="148dp"
                android:layout_height="35dp"
                android:layout_marginStart="35dp"
                android:layout_marginTop="205dp"
                android:layout_marginBottom="155dp"
                android:background="#975E33"
                android:backgroundTint="#975E33"
                android:onClick="takePhoto"
                android:text="@string/btn_photo"
                android:textColor="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnBirth"
                android:layout_width="148dp"
                android:layout_height="35dp"
                android:layout_marginStart="184dp"
                android:background="#975E33"
                android:backgroundTint="#975E33"
                android:onClick="selectDate"
                android:text="@string/btn_birth"
                android:textColor="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.446" />

            <EditText
                android:id="@+id/txtName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="185dp"
                android:layout_marginTop="77dp"
                android:layout_marginBottom="273dp"
                android:backgroundTint="#000000"
                android:ems="10"
                android:inputType="textPersonName"
                android:textColor="#000000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/btnSave"
                android:layout_width="105dp"
                android:layout_height="49dp"
                android:layout_marginStart="544dp"
                android:layout_marginBottom="68dp"
                android:background="#975E33"
                android:backgroundTint="#975E33"
                android:onClick="saveUser"
                android:text="@string/btn_cad"
                android:textColor="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textView18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="185dp"
                android:layout_marginTop="130dp"
                android:layout_marginEnd="421dp"
                android:layout_marginBottom="251dp"
                android:text="@string/bithday"
                android:textColor="#000000"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <RadioGroup
                android:id="@+id/radioGroup"
                android:layout_width="148dp"
                android:layout_height="113dp"
                android:layout_marginStart="461dp"
                android:layout_marginTop="85dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <RadioButton
                    android:id="@+id/radioButtonF"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gender_f_name"
                    android:textColor="#020202" />

                <RadioButton
                    android:id="@+id/radioButtonM"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/gender_m_name" />
            </RadioGroup>

            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="295dp"
                android:layout_marginTop="265dp"
                android:text="@string/house"
                android:textColor="#000000"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/divider5"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="53dp"
                android:layout_marginBottom="346dp"
                android:background="?android:attr/listDivider"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:layout_editor_absoluteX="341dp"
                tools:layout_editor_absoluteY="151dp">

            </FrameLayout>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:layout_editor_absoluteX="-68dp"
                tools:layout_editor_absoluteY="253dp">

            </FrameLayout>

            <Spinner
                android:id="@+id/spinnerHouses"
                android:layout_width="210dp"
                android:layout_height="41dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.596"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.802" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>